survey-salesforce/salesforce-app/src/objects/PPITableLine__c.object
<CustomObject>
    <description>The scoring line for the PPI table</description>
    <fields>
        <fullName>From__c</fullName>
        <description>Scoring range start score</description>
        <label>From</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPITableDataSet__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PPI Table Data Set</label>
        <referenceTo>PPITableDataSet__c</referenceTo>
        <relationshipLabel>PPI Table Lines</relationshipLabel>
        <relationshipName>PPI_Table_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>Probability of being below the poverty line for the specified scoring range</description>
        <label>Probability</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Scoring range finish score</description>
        <label>To</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PPI Table Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPIL-{00000000}</displayFormat>
        <label>PPI Table Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Table Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>